# DevAVXPRNG

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  index.html  libtool
include/: AlgorithmCalcFixPoint.hpp  AlgorithmDSFMTEquidistribution.hpp  AlgorithmSIMDEquidistribution.hpp  Annihilate.hpp  DCOptions.hpp  EQOptions.hpp  SFMTAVX2dc.hpp  SFMTAVX2search.hpp  SFMTAVX512Fdc.hpp  SFMTAVX512Fsearch.hpp  SFMTAVXdc.hpp  SFMTAVXeq.hpp  config.h.in  dSFMTAVX2dc.h  dSFMTAVX2search.hpp  dSFMTAVX512Fdc.h  dSFMTAVX512Fsearch.hpp  dSFMTAVXdc.hpp  dSFMTAVXeq.hpp  devavxprng.h  w256.hpp
mpisrc/: Makefile.am  SFMTAVX2dc_mpi.cpp  SFMTAVX2eq_mpi.cpp  SFMTAVX512Fdc_mpi.cpp  SFMTAVX512Feq_mpi.cpp  SFMTAVXeqmpi.hpp  dSFMTAVX2dc_mpi.cpp  dSFMTAVX2eq_mpi.cpp  dSFMTAVX512Fdc_mpi.cpp  dSFMTAVX512Feq_mpi.cpp  dSFMTAVXeqmpi.hpp
src/: AlgorithmDSFMTEquidistribution.hpp  AlgorithmSIMDEquidistribution.hpp  Annihilate.hpp  Makefile.am  Makefile.in  Makefile.private  SFMTAVX2dc.cpp  SFMTAVX2dc.h  SFMTAVX2dc_mpi.cpp  SFMTAVX2eq.cpp  SFMTAVX2eq_mpi.cpp  SFMTAVX2search.hpp  SFMTAVX512Fdc.cpp  SFMTAVX512Fdc.h  SFMTAVX512Fdc_mpi.cpp  SFMTAVX512Feq.cpp  SFMTAVX512Fsearch.hpp  config.h.in  dSFMTAVX2dc.cpp  dSFMTAVX2dc_mpi_main.cpp  dSFMTAVX2eq.cpp  dSFMTAVX2eq_mpi.cpp  dSFMTAVX2search.hpp  dSFMTAVX512Fdc.cpp  dSFMTAVX512Fdc.h  dSFMTAVX512Feq.cpp  dSFMTAVX512Fsearch.hpp  devavxprng.h  w256.hpp  w512.hpp
