#CXX = $(MPICXX)
CXX = @MPICXX@
AM_CXXFLAGS = -O2 -Wall -Wextra -I../include \
-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS
AM_LDFLAGS = -lMTToolBox

noinst_PROGRAMS = dSFMTAVX2dc_mpi dSFMTAVX512Fdc_mpi \
dSFMTAVX2eq_mpi dSFMTAVX512Feq_mpi \
SFMTAVX2dc_mpi SFMTAVX512Fdc_mpi \
SFMTAVX2eq_mpi SFMTAVX512Feq_mpi

dSFMTAVX2dc_mpi_SOURCES = dSFMTAVX2dc_mpi.cpp
dSFMTAVX512Fdc_mpi_SOURCES = dSFMTAVX512Fdc_mpi.cpp
dSFMTAVX2eq_mpi_SOURCES = dSFMTAVX2eq_mpi.cpp
dSFMTAVX512Feq_mpi_SOURCES = dSFMTAVX512Feq_mpi.cpp
SFMTAVX2dc_mpi_SOURCES = SFMTAVX2dc_mpi.cpp
SFMTAVX512Fdc_mpi_SOURCES = SFMTAVX512Fdc_mpi.cpp
SFMTAVX2eq_mpi_SOURCES = SFMTAVX2eq_mpi.cpp
SFMTAVX512Feq_mpi_SOURCES = SFMTAVX512Feq_mpi.cpp
