AM_CXXFLAGS = -O2 -Wall -Wextra -I../include \
-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS
AM_LDFLAGS = -lMTToolBox

noinst_PROGRAMS = dSFMTAVX2dc dSFMTAVX2eq dSFMTAVX512Fdc dSFMTAVX512Feq \
SFMTAVX2dc SFMTAVX2eq SFMTAVX512Fdc SFMTAVX512Feq

dSFMTAVX2dc_SOURCES = dSFMTAVX2dc.cpp
dSFMTAVX2eq_SOURCES = dSFMTAVX2eq.cpp
dSFMTAVX512Fdc_SOURCES = dSFMTAVX512Fdc.cpp
dSFMTAVX512Feq_SOURCES = dSFMTAVX512Feq.cpp
SFMTAVX2dc_SOURCES = SFMTAVX2dc.cpp
SFMTAVX2eq_SOURCES = SFMTAVX2eq.cpp
SFMTAVX512Fdc_SOURCES = SFMTAVX512Fdc.cpp
SFMTAVX512Feq_SOURCES = SFMTAVX512Feq.cpp
